--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-    <script src="firebase-config.js"></script>
+    <script src="config.js"></script>
 </head>
 <body class="bg-gray-100">
     <div id="app" class="relative flex size-full min-h-screen flex-col bg-gray-100 group/design-root overflow-x-hidden">
